# manor.lords.ai.guide

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  convert.md  docker-compose.yml  game_detector_service.pyw  manor_lords_ai_guide_v4.docx  pyproject.toml  requirements.txt  setup-game-detector.ps1
configs/: advisor_prompt.yaml  alert_rules.yaml  manor_lords_mapper.yaml
guides/: approval.md  beginner_guide.md  build_order.md  castle_and_medieval_settlement.md  economy_trade.md  resource_flowchart.md  winter_survival.md
src/: config.py  pipeline.py
src/analysis/: rag_retriever.py  state_embedder.py  trajectory_labeler.py  trend_predictor.py
src/dashboard/: app.py  routes.py
src/guides/: steam_notes.py
src/mapper/: alert_engine.py  schemas.py  state_mapper.py
src/memory/: request_log.py  session_store.py
src/parser/: gvas_parser.py
src/strategy/: evaluator.py  gemini_client.py  prompts.py  response_parser.py  thinking_level.py
src/watcher/: game_detector.py  save_watcher.py
static/: app.js  index.html  style.css
tools/: discover_paths.py  dump_save.py
web/: Dockerfile  package-lock.json  package.json
web/app/: app.css  config.server.ts  globals.css  layout.tsx  page.tsx  root.tsx  routes.ts
web/components/: ChatPanel.tsx  EvalBadge.tsx  HistoryPanel.tsx  NextSeasonPanel.tsx  PatchNotesPanel.tsx  PopOutButton.tsx  PrioritiesPanel.tsx  RealmMapPanel.tsx  RoadAheadPanel.tsx  SaveSelector.tsx  SituationPanel.tsx  StateBar.tsx  StreamingPanel.tsx  TrendsPanel.tsx  UploadZone.tsx  WarningsPanel.tsx
web/hooks/: useSSE.ts  useTrends.ts
(+28 files in other folders)
